(0719) feat : 레이어 소프트 딜리트 및 포크 API 구현 (02:17)